--- a/client/config/.env
+++ b/client/config/.env
@@ -1,22 +1,7 @@
-# Installation directories
 OQS_SSH_DIR="/opt/oqs-ssh"
 LIBOQS_DIR="/opt/liboqs"
 INSTALL_PREFIX="/usr/local"
-
-# Repository URLs and versions
 OQS_SSH_REPO="https://github.com/open-quantum-safe/openssh-portable.git"
 LIBOQS_REPO="https://github.com/open-quantum-safe/liboqs.git"
-LIBOQS_VERSION="0.9.0"
-OQS_SSH_VERSION="V_8_9_P1"
-
-# Build configuration
-MIN_DISK_SPACE=5000000  # 5GB in KB
-MIN_RAM=2048           # 2GB in MB
-MIN_CMAKE_VERSION="3.10"
-
-# Logging
-LOG_FILE="/var/log/oqs-ssh-install.log"
-
-# SSH Configuration
-SSH_KEY_TYPE="kyber512"
-SSH_KEY_NAME="id_kyber512"
+LIBOQS_VERSION="0.8.0"
+OQS_SSH_VERSION="OQS-OpenSSH-snapshot-2024-01"
