--- a/client/config/.env
+++ b/client/config/.env
@@ -1,7 +1,31 @@
-OQS_SSH_DIR="/opt/oqs-ssh"
-LIBOQS_DIR="/opt/liboqs"
-INSTALL_PREFIX="/usr/local"
-OQS_SSH_REPO="https://github.com/open-quantum-safe/openssh-portable.git"
-LIBOQS_REPO="https://github.com/open-quantum-safe/liboqs.git"
-LIBOQS_VERSION="0.8.0"
-OQS_SSH_VERSION="OQS-OpenSSH-snapshot-2024-08"
+#!/usr/bin/env bash
+#
+# .env
+#
+# Configuration for building liboqs and OQS-SSH.
+# 
+# NOTE: Each variable supports override from the environment. 
+# For example, you can override OQS_SSH_DIR by running:
+#   OQS_SSH_DIR="/my/custom/path" sudo -E ./client.sh
+# The `-E` flag preserves the user's environment when using `sudo`.
+
+# Directory where OQS-SSH sources will be cloned.
+export OQS_SSH_DIR="${OQS_SSH_DIR:-/opt/oqs-ssh}"
+
+# Directory where liboqs sources will be cloned.
+export LIBOQS_DIR="${LIBOQS_DIR:-/opt/liboqs}"
+
+# Where compiled binaries and libraries get installed.
+export INSTALL_PREFIX="${INSTALL_PREFIX:-/usr/local}"
+
+# GitHub repository URL for OQS-SSH (Open Quantum Safe's OpenSSH fork).
+export OQS_SSH_REPO="${OQS_SSH_REPO:-https://github.com/open-quantum-safe/openssh-portable.git}"
+
+# GitHub repository URL for liboqs.
+export LIBOQS_REPO="${LIBOQS_REPO:-https://github.com/open-quantum-safe/liboqs.git}"
+
+# Specific branch/tag of liboqs to checkout (e.g., "0.8.0").
+export LIBOQS_VERSION="${LIBOQS_VERSION:-0.8.0}"
+
+# Specific branch/tag of OQS-SSH to checkout (e.g., "OQS-OpenSSH-snapshot-2024-08").
+export OQS_SSH_VERSION="${OQS_SSH_VERSION:-OQS-OpenSSH-snapshot-2024-08}"
